[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mloom"
version = "0.1.0"
description = "Local-First LLMOps Orchestration Platform"
dependencies = [
    "requests",
    "openai",
    "streamlit",
    "typer", # Adding typer since it was mentioned in cli.py tab
]

[project.optional-dependencies]
server = [
    "fastapi==0.136.0",
    "uvicorn==0.45.0",
    "SQLAlchemy==2.0.49",
    "pydantic==2.13.3",
    "psycopg2-binary"
]

[project.scripts]
mloom = "mloom.cli:main"
